# qt_template

./: CMakeLists.txt  LICENSE  README.md  meson.build
quick_template/: CMakeLists.txt  Main.qml  main.cpp  meson.build  resources.qrc
src/widget_template/: CMakeLists.txt  main.cpp
src/widget_template/include/: mainwindow.h
src/widget_template/src/: mainwindow.cpp
src/widget_template/src/ui/: mainwindow.ui
widget_template/: CMakeLists.txt  README.md  lang.qrc  main.cpp  meson.build
widget_template/i18n/: en_US.ts  zh-CN.ts  zh_CN.ts
widget_template/include/: languagetest.h  mainwindow.h
widget_template/src/: languagetest.cpp  mainwindow.cpp
widget_template/ui/: languagetest.ui  mainwindow.ui
